# calmcore

./: .gitignore  Cargo.toml  README.md  build.rs
calmcore/: Cargo.toml  README.md
calmcore/src/: calm_core.rs  engine.rs  job.rs  lib.rs  store.rs  util.rs
calmcore/src/analyzer/: dict.rs  mod.rs  tokenizer_standard.rs  tokenizer_whitespace.rs
calmcore/src/embedding/: mod.rs
calmcore/src/index_store/: mod.rs  segment.rs  segment_disk.rs  segment_mem.rs  stream.rs
calmcore/src/index_store/index_fulltext/: mod.rs  reader.rs  serializer.rs  writer.rs
calmcore/src/index_store/index_term/: mod.rs  reader.rs  serializer.rs  writer.rs
calmcore/src/index_store/index_vector/: mod.rs  stream.rs
calmcore/src/index_store/seacher/: context.rs  mod.rs  plan.rs
calmcore/src/index_store/store/: disk.rs  memory.rs  mod.rs
calmcore/src/index_store/store/invert/: disk.rs  memory.rs  mod.rs
calmcore/src/index_store/stream/: bitmap.rs  comb.rs
calmcore/src/persist/: mod.rs  schema.rs
calmcore/src/protocols/: mod.rs
calmcore/src/protocols/sql/: mod.rs  statement.rs
config/: config.toml
docs/: architecture.md  calmanswer.md  calmcore.md  calmkeeper.md  calmrouter.md  calmserver.md  cloud.md  concepts.md  conversational.md  deployment.md  motivation.md  overview.md  quickstart.md  references.md  roadmap.md  search.md
docs/blog/: README.md  agent.md  dic.md  index.md  raft.md  schemaless.md  search_with_dic.md
docs/blog/temp_doc/: gql.md
examples/: big_data.rs  conn_server.rs  disk_search.rs  hybrid_search.rs  sample_search.rs  tree_file.rs  tree_fix.rs  validate.rs  vector_search.rs  zwxx_example.rs
libs/hora_lib/: Cargo.toml  README
libs/hora_lib/src/core/: ann_index.rs  kmeans.rs  metrics.rs
libs/hora_lib/src/index/: bruteforce_idx.rs  bruteforce_params.rs  hnsw_idx.rs  pq_idx.rs  (+1 more)
libs/mem_btree/: Cargo.toml
libs/mem_btree/examples/: other.rs
libs/mem_btree/src/: batch_write.rs  leaf.rs  lib.rs  node.rs
libs/mem_btree/src/persist/: mod.rs  zigzag.rs
proto/: build.py  build.sh
proto/rust_pb/: Cargo.toml
proto/rust_pb/src/: calmserver.rs  core.rs  lib.rs
proto/src/: calmserver.proto  core.proto
src/: main.rs
src/commons/: mod.rs  network.rs  times.rs
src/graphql/: mod.rs  models.rs  query.rs
src/grpc/: mod.rs  server.rs
src/service/: mod.rs
